Fix PlayStation build of WebKitTestRunner after 278039@main https://bugs.webkit.org/show_bug.cgi?id=273645

Unreviewed build fix.

Update method signatures.

* Tools/WebKitTestRunner/InjectedBundle/playstation/AccessibilityUIElementPlayStation.cpp:

Canonical link: https://commits.webkit.org/278299@main